# restrand-fasta

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  Makefile  README.md  SECURITY.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: main.rs
tests/: restrand_fasta.rs
